osprey_worker/src/osprey/engine/ast_validator/validators/tests/test_validate_extractable_feature_types/test_custom_type_as_extracted_feature_fails.txt
error: cannot extract feature with type `CustomResultT`
--> main.sml:1:0
     |
   1 | MyResult = ReturnsCustomType()
     | ^ type `CustomResultT` cannot be serialized for extraction.
       | Extracted features must be primitive types (str, int, float, bool), Optional[T], List[T], or EntityT.
       |
       | To use this value without extraction, prefix the variable name with `_`:
       |     _MyResult = ...  # local variable, not extracted
